--- a/html/deposit.html
+++ b/html/deposit.html
@@ -420,7 +420,7 @@
                             <i class="dealRecord_ic"></i>
                             交易紀錄
                         </li>
-                        <li onclick="window.location.href='./dealRecord.html'">
+                        <li onclick="window.location.href='./dividend.html'">
                             <i class="dividend_ic"></i>
                             查詢紅利
                         </li>
