--- a/html/eventApply.html
+++ b/html/eventApply.html
@@ -401,6 +401,10 @@
                             <i class="user_ic"></i>
                             個人資料
                         </li>
+                        <li onclick="window.location.href='./invite.html'">
+                            <i class="invite_ic"></i>
+                            邀請會員
+                        </li>
                         <!-- <li onclick="window.location.href='./vip.html'">
                             <i class="vip_ic"></i>
                             VIP會員
@@ -417,11 +421,15 @@
                             <i class="dealRecord_ic"></i>
                             交易紀錄
                         </li>
+                        <li onclick="window.location.href='./dividend.html'">
+                            <i class="dividend_ic"></i>
+                            查詢紅利
+                        </li>
                         <li onclick="window.location.href='./betRecord.html'">
                             <i class="betRecord_ic"></i>
                             投注紀錄
                         </li>
-                        <li class="active" onclick="window.location.href='./eventApply.html'">
+                        <li class="active"  onclick="window.location.href='./eventApply.html'">
                             <i class="event_ic"></i>
                             優惠申請
                         </li>
