--- a/html/invite.html
+++ b/html/invite.html
@@ -382,7 +382,7 @@
                             <p class="days">加入通博第 799 天</p>
                             <ul class="quickSelect">
                                 <li onclick="window.location.href='./deposit.html'">
-                                    <p class="btn active">存</p>
+                                    <p class="btn">存</p>
                                     <p>存款</p>
                                 </li>
                                 <li onclick="window.location.href='./transfer.html'">
@@ -401,7 +401,7 @@
                             <i class="user_ic"></i>
                             個人資料
                         </li>
-                        <li onclick="window.location.href='./invite.html'">
+                        <li class="active" onclick="window.location.href='./invite.html'">
                             <i class="invite_ic"></i>
                             邀請會員
                         </li>
@@ -421,7 +421,7 @@
                             <i class="dealRecord_ic"></i>
                             交易紀錄
                         </li>
-                        <li onclick="window.location.href='./dealRecord.html'">
+                        <li onclick="window.location.href='./dividend.html'">
                             <i class="dividend_ic"></i>
                             查詢紅利
                         </li>
@@ -447,27 +447,27 @@
                                 <div class="content">
                                     <div class="invitebox">
                                         <div class="left">
-                                            <li>
+                                            <div class="li">
                                                 <span>邀請碼</span>
                                                 <span>
                                                     M54ea858
-                                                    <button class="copy">複製</button>
+                                                    <button class="copy">點擊及複製</button>
                                                 </span>
-                                            </li>
-                                            <li>
+                                            </div>
+                                            <div class="li">
                                                 <span>推廣網址</span>
                                                 <span>
                                                     <input type="text" value="https://mbfe.op8899.net/#/register?code=M54ea858">
-                                                    <button class="copy">複製</button>
+                                                    <button class="copy">點擊及複製</button>
                                                 </span>
-                                            </li>
+                                            </div>
                                         </div>
                                         <div class="right">
                                             <li class="forQR">
                                                 <span>推廣網址</span>
-                                                <span>QR code</span>
-                                                <div class="qrCode"></div>
+                                                <h1>QR code</h1>
                                             </li>
+                                            <div class="qrCode"></div>
                                         </div>
                                     </div>
                                 <div class="inviteimg"></div>
