--- a/html/wallet.html
+++ b/html/wallet.html
@@ -400,6 +400,10 @@
                             <i class="user_ic"></i>
                             個人資料
                         </li>
+                        <li onclick="window.location.href='./invite.html'">
+                            <i class="invite_ic"></i>
+                            邀請會員
+                        </li>
                         <!-- <li onclick="window.location.href='./vip.html'">
                             <i class="vip_ic"></i>
                             VIP會員
@@ -415,6 +419,10 @@
                         <li onclick="window.location.href='./dealRecord.html'">
                             <i class="dealRecord_ic"></i>
                             交易紀錄
+                        </li>
+                        <li onclick="window.location.href='./dividend.html'">
+                            <i class="dividend_ic"></i>
+                            查詢紅利
                         </li>
                         <li onclick="window.location.href='./betRecord.html'">
                             <i class="betRecord_ic"></i>
@@ -478,7 +486,7 @@
                                     <li>歷史錢包</li> -->
                                     <li class="active">平台帳戶</li>
                                 </ul>
-                                <div class="activeWallet">
+                                <!-- <div class="activeWallet">
                                     <p class="title">活動錢包明細</p>
                                     <ul class="walletDetail">
                                         <li class="detailTitle">
@@ -511,7 +519,7 @@
                                         </li>
                                         <p class="noData">目前無資料</p>
                                     </ul>
-                                </div>
+                                </div> -->
                                 <div class="historyWallet">
                                     <p class="title">歷史錢包明細</p>
                                     <ul class="walletDetail">
