--- a/html/dividend.html
+++ b/html/dividend.html
@@ -498,19 +498,25 @@
                                                     <th>預估紅利</th>
                                                 </tr>
                                                 <tr>
-                                                    <td>一代會員</td>
+                                                    <td>
+                                                        <a href="#" class="onemember">一代會員</a>
+                                                    </td>
                                                     <td>0</td>
                                                     <td>0</td>
                                                     <td>0</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>二代會員</td>
+                                                    <td>
+                                                        <a href="#" class="onemember">二代會員</a>
+                                                    </td>
                                                     <td>0</td>
                                                     <td>0</td>
                                                     <td>0</td>
                                                 </tr>
                                                 <tr>
-                                                    <td>三代會員</td>
+                                                    <td>
+                                                        <a href="#" class="onemember">三代會員</a>
+                                                    </td>
                                                     <td>0</td>
                                                     <td>0</td>
                                                     <td>0</td>
@@ -899,6 +905,36 @@
                         </div>
                     </li>
                 </ul>
+            </div>
+            <div class="jumpWindow onemember">
+                <div class="title">
+                    <p>注單明細</p>
+                    <i class="close_ic_gray"></i>
+                </div>
+                <div class="content">
+                    <table>
+                        <tr>
+                            <th>會員帳號</th>
+                            <th>會員名稱</th>
+                        </tr>
+                        <tr>
+                            <td class="numTd">1234321</td>
+                            <td class="nameTd">nanj</td>
+                        </tr>
+                        <tr>
+                            <td class="numTd">5555534</td>
+                            <td class="nameTd">Yang Lin</td>
+                        </tr>
+                        <tr>
+                            <td class="numTd">6598477</td>
+                            <td class="nameTd">九一壹</td>
+                        </tr>
+                        <tr>
+                            <td class="numTd">1234487</td>
+                            <td class="nameTd">None </td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </body>
