--- a/html/member.html
+++ b/html/member.html
@@ -501,7 +501,7 @@
                                                                 聯絡電話
                                                             </label>
                                                             <input type="text" value="0800123456" readonly>
-                                                            <button type="button" class="smalltyBtn">修改</button>
+                                                            <button type="button" class="smalltyBtn Revise">修改</button>
                                                         </li>
                                                         <li>
                                                             <label>
@@ -509,7 +509,7 @@
                                                                 Email
                                                             </label>
                                                             <input type="text">
-                                                            <button type="button" class="smalltyBtn">修改</button>
+                                                            <button type="button" class="smalltyBtn confirm-style">修改</button>
                                                         </li>
                                                         <li>
                                                             <label>
@@ -1012,6 +1012,27 @@
                 <div class="btnBox">
                     <button>確認</button>
                 </div>
+            </form>
+        </div>
+        <div class="jumpWindow ReviseWindow">
+            <div class="title">
+                <p>提示</p>
+                <i class="close_ic"></i>
+            </div>
+            <form>
+                <div class="content">
+                    <ul>
+                        <li>原有號碼 : 0800121121 </li>
+                        <li><input type="text" placeholder="請輸入手機號碼">
+                            <button>取得驗證碼</button>
+                        </li>
+                        <li><input type="text" placeholder="驗證碼"></li>
+                    </ul>
+                </div>
+                <div class="btnBox">
+                    <button>確認</button>
+                </div>
+                <span>送出驗證碼後，請立即連繫在線客服</span>
             </form>
         </div>
     </div>
